c/include/cuvs/neighbors/cagra.h


enum cuvsCagraGraphBuildAlgo {
  AUTO_SELECT = 0,
  IVF_PQ = 1,
  NN_DESCENT = 2,
  ITERATIVE_CAGRA_SEARCH = 3,
  ACE = 4
};
struct cuvsIvfPqParams {
  cuvsIvfPqIndexParams_t ivf_pq_build_params;
  cuvsIvfPqSearchParams_t ivf_pq_search_params;
  float refinement_rate;
};
typedef struct cuvsIvfPqParams* cuvsIvfPqParams_t;
struct cuvsAceParams {
  size_t npartitions;
  size_t ef_construction;
  const char* build_dir;
  bool use_disk;
  double max_host_memory_gb;
  double max_gpu_memory_gb;
};
typedef struct cuvsAceParams* cuvsAceParams_t;
struct cuvsCagraIndexParams {
  cuvsDistanceType metric;
  size_t intermediate_graph_degree;
  size_t graph_degree;
  enum cuvsCagraGraphBuildAlgo build_algo;
  size_t nn_descent_niter;
  void* graph_build_params;
};
typedef struct cuvsCagraIndexParams* cuvsCagraIndexParams_t;
CUVS_EXPORT cuvsError_t cuvsCagraIndexParamsCreate(cuvsCagraIndexParams_t* params);
CUVS_EXPORT cuvsError_t cuvsCagraIndexParamsDestroy(cuvsCagraIndexParams_t params);
CUVS_EXPORT cuvsError_t cuvsAceParamsCreate(cuvsAceParams_t* params);
CUVS_EXPORT cuvsError_t cuvsAceParamsDestroy(cuvsAceParams_t params);
struct cuvsCagraExtendParams {
  uint32_t max_chunk_size;
};
typedef struct cuvsCagraExtendParams* cuvsCagraExtendParams_t;
CUVS_EXPORT cuvsError_t cuvsCagraExtendParamsCreate(cuvsCagraExtendParams_t* params);
CUVS_EXPORT cuvsError_t cuvsCagraExtendParamsDestroy(cuvsCagraExtendParams_t params);
enum cuvsCagraSearchAlgo {
  SINGLE_CTA = 0,
  MULTI_CTA    = 1,
  MULTI_KERNEL = 2,
  AUTO         = 100
};
enum cuvsCagraHashMode { HASH = 0, SMALL = 1, AUTO_HASH = 100 };
struct cuvsCagraSearchParams {
  size_t max_queries;
  size_t itopk_size;
  size_t max_iterations;
  enum cuvsCagraSearchAlgo algo;
  size_t team_size;
  size_t search_width;
  size_t min_iterations;
  size_t thread_block_size;
  enum cuvsCagraHashMode hashmap_mode;
  size_t hashmap_min_bitlen;
  float hashmap_max_fill_rate;
  uint32_t num_random_samplings;
  uint64_t rand_xor_mask;
  bool persistent;
  float persistent_lifetime;
  float persistent_device_usage;
};
typedef struct cuvsCagraSearchParams* cuvsCagraSearchParams_t;
CUVS_EXPORT cuvsError_t cuvsCagraSearchParamsCreate(cuvsCagraSearchParams_t* params);
CUVS_EXPORT cuvsError_t cuvsCagraSearchParamsDestroy(cuvsCagraSearchParams_t params);
typedef struct cuvsCagraIndex {
  uintptr_t addr;
  DLDataType dtype;
} cuvsCagraIndex;
typedef cuvsCagraIndex* cuvsCagraIndex_t;
CUVS_EXPORT cuvsError_t cuvsCagraIndexCreate(cuvsCagraIndex_t* index);
CUVS_EXPORT cuvsError_t cuvsCagraIndexDestroy(cuvsCagraIndex_t index);
CUVS_EXPORT cuvsError_t cuvsCagraIndexGetDims(cuvsCagraIndex_t index, int64_t* dim);
CUVS_EXPORT cuvsError_t cuvsCagraIndexGetSize(cuvsCagraIndex_t index, int64_t* size);
CUVS_EXPORT cuvsError_t cuvsCagraIndexGetGraphDegree(cuvsCagraIndex_t index, int64_t* graph_degree);
CUVS_EXPORT cuvsError_t cuvsCagraIndexGetDataset(cuvsCagraIndex_t index, DLManagedTensor* dataset);
CUVS_EXPORT cuvsError_t cuvsCagraIndexGetGraph(cuvsCagraIndex_t index, DLManagedTensor* graph);
CUVS_EXPORT cuvsError_t cuvsCagraUpdateDataset(cuvsResources_t res,
                                               cuvsDatasetView_t device_padded_dataset,
                                               cuvsCagraIndex_t index);
CUVS_EXPORT cuvsError_t cuvsCagraGetDatasetMemTypeAndLayout(DLManagedTensor* dataset,
                                                            cuvsDatasetMemType_t* mem_type,
                                                            cuvsDatasetLayout_t* layout);
CUVS_EXPORT cuvsError_t cuvsCagraBuild(cuvsResources_t res,
                                       cuvsCagraIndexParams_t params,
                                       cuvsDatasetView_t dataset,
                                       cuvsCagraIndex_t index);
CUVS_EXPORT cuvsError_t cuvsCagraExtend(cuvsResources_t res,
                            cuvsCagraExtendParams_t params,
                            cuvsDatasetView_t additional_dataset,
                            cuvsDatasetView_t extended_dataset,
                            cuvsCagraIndex_t index);
CUVS_EXPORT cuvsError_t cuvsCagraSearch(cuvsResources_t res,
                            cuvsCagraSearchParams_t params,
                            cuvsCagraIndex_t index,
                            DLManagedTensor* queries,
                            DLManagedTensor* neighbors,
                            DLManagedTensor* distances,
                            cuvsFilter filter);
CUVS_EXPORT cuvsError_t cuvsCagraSerialize(cuvsResources_t res,
                               const char* filename,
                               cuvsCagraIndex_t index,
                               bool include_dataset);
CUVS_EXPORT cuvsError_t cuvsCagraSerializeToHnswlib(cuvsResources_t res,
                                        const char* filename,
                                        cuvsCagraIndex_t index);
CUVS_EXPORT cuvsError_t cuvsCagraDeserializePadded(cuvsResources_t res,
                                                    const char* filename,
                                                    cuvsCagraIndex_t index,
                                                    cuvsDataset_t* out_padded_dataset);
CUVS_EXPORT cuvsError_t cuvsCagraDeserializeStandard(cuvsResources_t res,
                                                     const char* filename,
                                                     cuvsCagraIndex_t index,
                                                     cuvsDataset_t* out_standard_dataset);
CUVS_EXPORT cuvsError_t cuvsCagraIndexFromArgs(cuvsResources_t res,
                                   cuvsDistanceType metric,
                                   DLManagedTensor* graph,
                                   DLManagedTensor* dataset,
                                   cuvsCagraIndex_t index);