c/include/cuvs/core/dataset.h


typedef enum {
  CUVS_DATASET_LAYOUT_STANDARD = 0,
  CUVS_DATASET_LAYOUT_PADDED   = 1
} cuvsDatasetLayout_t;
typedef enum {
  CUVS_DATASET_MEM_TYPE_HOST   = 0,
  CUVS_DATASET_MEM_TYPE_DEVICE = 1
} cuvsDatasetMemType_t;
typedef struct {
  uintptr_t addr;
  void (*destroy_addr)(void*);
  DLDataType dtype;
  cuvsDatasetMemType_t mem_type;
  cuvsDatasetLayout_t layout;
} cuvsDataset;
typedef cuvsDataset* cuvsDataset_t;
typedef struct {
  uintptr_t addr;
  void (*destroy_addr)(void*);
  DLDataType dtype;
  cuvsDatasetMemType_t mem_type;
  cuvsDatasetLayout_t layout;
} cuvsDatasetView;
typedef cuvsDatasetView* cuvsDatasetView_t;
CUVS_EXPORT cuvsError_t cuvsDatasetDevicePaddedMake(cuvsResources_t res,
                                                    DLManagedTensor* dataset,
                                                    cuvsDataset_t* padded_dataset);
CUVS_EXPORT cuvsError_t cuvsDatasetDevicePaddedViewMake(cuvsResources_t res,
                                                        DLManagedTensor* dataset,
                                                        cuvsDatasetView_t* padded_dataset);
CUVS_EXPORT cuvsError_t cuvsDatasetViewFromOwningPaddedMake(
  cuvsDataset_t padded_dataset, cuvsDatasetView_t* padded_view);
CUVS_EXPORT cuvsError_t cuvsDatasetHostPaddedViewMake(cuvsResources_t res,
                                                      DLManagedTensor* dataset,
                                                      cuvsDatasetView_t* padded_dataset);
CUVS_EXPORT cuvsError_t cuvsDatasetDeviceStandardViewMake(cuvsResources_t res,
                                                          DLManagedTensor* dataset,
                                                          cuvsDatasetView_t* standard_dataset);
CUVS_EXPORT cuvsError_t cuvsDatasetHostStandardViewMake(cuvsResources_t res,
                                                        DLManagedTensor* dataset,
                                                        cuvsDatasetView_t* standard_dataset);
CUVS_EXPORT cuvsError_t cuvsDatasetDestroy(cuvsDataset_t dataset);
CUVS_EXPORT cuvsError_t cuvsDatasetViewDestroy(cuvsDatasetView_t dataset_view);